# orbitrap-iapi-sim

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  Directory.Build.props  Makefile  Orbitrap.sln  README.md  justfile  orbitrap-thin-waist.md  run-tests.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-check.yml  release.yml
data/: sample.mzML
docker/: .dockerignore  Dockerfile.console  Dockerfile.simulator  Dockerfile.stress  docker-compose.yml  prometheus.yml
docs/: IMPLEMENTATION_SUMMARY.md  VIRTUAL_ORBITRAP_IMPLEMENTATION_GUIDE.md
protos/: simulator.proto
samples/Orbitrap.Console/: Orbitrap.Console.csproj  Program.cs
samples/Orbitrap.GrpcStress/: Orbitrap.GrpcStress.csproj  Program.cs
samples/VirtualOrbitrap.BasicUsage/: Program.cs  VirtualOrbitrap.BasicUsage.csproj
samples/VirtualOrbitrap.StreamingSimulation/: Program.cs  VirtualOrbitrap.StreamingSimulation.csproj
src/rust/lc-ms-simulator/: Cargo.toml  build.rs
src/rust/lc-ms-simulator/src/: main.rs  proto.rs  service.rs  simulator.rs
tests/Orbitrap.Abstractions.Tests/: FrozenOrbitrapScanTests.cs  Orbitrap.Abstractions.Tests.csproj  OrbitrapScanEventArgsTests.cs  ScanFilterTests.cs  ScanResultTests.cs
tests/Orbitrap.Integration.Tests/: InstrumentFactoryTests.cs  Orbitrap.Integration.Tests.csproj  ServiceCollectionExtensionsTests.cs
tests/Orbitrap.Mock.Tests/: InstrumentOptionsTests.cs  MockMsScanTests.cs  MockOrbitrapInstrumentTests.cs  Orbitrap.Mock.Tests.csproj
tests/VirtualOrbitrap.Tests/: VirtualOrbitrap.Tests.csproj
(+57 files in other folders)
